syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.loadguide";
option java_outer_classname = "LoadGuideProto";

package loadguide;

service LoadGuide {
    rpc SendLoad(PowerRequest) returns (LoadReply) {}
    rpc Ping(WhoAmI) returns (WhoAmI) {}
    rpc SendResult(LoadResMsg) returns (Empty) {}
}

message PowerRequest {
    int32 core = 1;
    int32 weight = 2;
}

message LoadReply {
    repeated string urls = 1;
    int32 requests = 2;
    int32 workers = 3;
}

message WhoAmI {
    string name = 1;
    string type = 2;
    string addr = 3;
}

message LoadResMsg {
    string ID = 1;
    string url = 2;
    int32 status = 3;
    int32 timestamp = 4;
}

message Empty {
}
